@@ -45,13 +45,6 @@ class HooksTest extends WebTestBase {
     $this->drupalCreateNode(array('type' => 'page', 'title' => 'node - 3'));
     $this->drupalCreateNode(array('type' => 'page', 'title' => 'node - 4'));
 
-    // Do not use a batch for tracking the initial items after creating an
-    // index when running the tests via the GUI. Otherwise, it seems Drupal's
-    // Batch API gets confused and the test fails.
-    if (php_sapi_name() != 'cli') {
-      \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
-    }
-
     // Create an index and server to work with.
     $this->server = $this->getTestServer();
     $index = $this->getTestIndex();
