@@ -34,6 +34,13 @@ class LocalActionsWebTest extends LocalActionTest {
     // Create users.
     $this->adminUser = $this->drupalCreateUser(array('administer search_api', 'access administration pages'));
     $this->drupalLogin($this->adminUser);
+
+    // Do not use a batch for tracking the initial items after creating an
+    // index when running the tests via the GUI. Otherwise, it seems Drupal's
+    // Batch API gets confused and the test fails.
+    if (php_sapi_name() != 'cli') {
+      \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
+    }
   }
 
   /**
