@@ -34,13 +34,6 @@ class OverviewPageTest extends WebTestBase {
   public function setUp() {
     parent::setUp();
 
-    // Do not use a batch for tracking the initial items after creating an
-    // index when running the tests via the GUI. Otherwise, it seems Drupal's
-    // Batch API gets confused and the test fails.
-    if (php_sapi_name() != 'cli') {
-      \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
-    }
-
     $this->drupalLogin($this->adminUser);
 
     $this->overviewPageUrl = 'admin/config/search/search-api';
