@@ -56,6 +56,13 @@ class ViewsTest extends SimpletestWebTestBase {
       ->addItemsAll(Index::load($this->indexId));
     $this->insertExampleContent();
     $this->indexItems($this->indexId);
+
+    // Do not use a batch for tracking the initial items after creating an
+    // index when running the tests via the GUI. Otherwise, it seems Drupal's
+    // Batch API gets confused and the test fails.
+    if (php_sapi_name() != 'cli') {
+      \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
+    }
   }
 
   /**
@@ -122,13 +129,21 @@ class ViewsTest extends SimpletestWebTestBase {
     $this->assertNoText('You must include at least one positive keyword with 3 characters or more', "$label didn't display a warning.");
 
     $this->checkResults(array('id[value]' => 2), array(2), 'Search with ID filter');
-    // @todo Enable "between" again. See #2624870.
-//    $query = array(
-//      'id[min]' => 2,
-//      'id[max]' => 4,
-//      'id_op' => 'between',
-//    );
-//    $this->checkResults($query, array(2, 3, 4), 'Search with ID "in between" filter');
+
+    $query = array(
+      'id[min]' => 2,
+      'id[max]' => 4,
+      'id_op' => 'between',
+    );
+    $this->checkResults($query, array(2, 3, 4), 'Search with ID "in between" filter');
+
+    $query = array(
+      'id[min]' => 2,
+      'id[max]' => 4,
+      'id_op' => 'not between',
+    );
+    $this->checkResults($query, array(1, 5), 'Search with ID "not in between" filter');
+
     $query = array(
       'id[value]' => 2,
       'id_op' => '>',
@@ -169,13 +184,13 @@ class ViewsTest extends SimpletestWebTestBase {
     $this->checkResults($query, array(1, 2, 3, 4, 5), 'Search with "not empty creation date" filter');
 
     $this->checkResults(array('keywords[value]' => 'apple'), array(2, 4), 'Search with Keywords filter');
-    // @todo Enable "between" again. See #2695627.
-//    $query = array(
-//      'keywords[min]' => 'aardvark',
-//      'keywords[max]' => 'calypso',
-//      'keywords_op' => 'between',
-//    );
-//    $this->checkResults($query, array(2, 4, 5), 'Search with Keywords "in between" filter');
+    $query = array(
+      'keywords[min]' => 'aardvark',
+      'keywords[max]' => 'calypso',
+      'keywords_op' => 'between',
+    );
+    $this->checkResults($query, array(2, 4, 5), 'Search with Keywords "in between" filter');
+
     // For the keywords filters with comparison operators, exclude entity 1
     // since that contains all the uppercase and special characters weirdness.
     $query = array(
@@ -254,6 +269,41 @@ class ViewsTest extends SimpletestWebTestBase {
       'keywords_op' => '>=',
     );
     $this->checkResults($query, array(2, 5), 'Search with arguments and filters', 'entity:entity_test_mulrev_changed/all/orange');
+
+    // Make sure the datasource filter works correctly with multiple selections.
+    $index = Index::load($this->indexId);
+    $index->addDatasource($index->createPlugin('datasource', 'entity:user'));
+    $index->save();
+
+    $query = array(
+      'datasource' => array('entity:user', 'entity:entity_test_mulrev_changed'),
+      'datasource_op' => 'or',
+    );
+    $this->checkResults($query, array(1, 2, 3, 4, 5), 'Search with multiple datasource filters (OR)');
+
+    $query = array(
+      'datasource' => array('entity:user', 'entity:entity_test_mulrev_changed'),
+      'datasource_op' => 'and',
+    );
+    $this->checkResults($query, array(), 'Search with multiple datasource filters (AND)');
+
+    $query = array(
+      'datasource' => array('entity:user'),
+      'datasource_op' => 'not',
+    );
+    $this->checkResults($query, array(1, 2, 3, 4, 5), 'Search for non-user results');
+
+    $query = array(
+      'datasource' => array('entity:entity_test_mulrev_changed'),
+      'datasource_op' => 'not',
+    );
+    $this->checkResults($query, array(), 'Search for non-test entity results');
+
+    $query = array(
+      'datasource' => array('entity:user', 'entity:entity_test_mulrev_changed'),
+      'datasource_op' => 'not',
+    );
+    $this->checkResults($query, array(), 'Search for results of no available datasource');
 
     // Make sure there was a display plugin created for this view.
     $displays = \Drupal::getContainer()->get('plugin.manager.search_api.display')
