@@ -95,6 +95,13 @@ abstract class WebTestBase extends SimpletestWebTestBase {
       'type' => 'page',
       'name' => 'Page',
     ));
+
+    // Do not use a batch for tracking the initial items after creating an
+    // index when running the tests via the GUI. Otherwise, it seems Drupal's
+    // Batch API gets confused and the test fails.
+    if (php_sapi_name() != 'cli') {
+      \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
+    }
   }
 
   /**
