@@ -201,6 +201,33 @@ display:
               anonymous: '0'
               administrator: '0'
           is_grouped: false
+        search_api_datasource:
+          plugin_id: search_api_datasource
+          id: search_api_datasource
+          table: search_api_index_database_search_index
+          field: search_api_datasource
+          relationship: none
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: datasource_op
+            label: ''
+            description: ''
+            use_operator: true
+            operator: datasource_op
+            identifier: datasource
+            required: false
+            remember: false
+            multiple: true
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+            reduce: false
+          is_grouped: false
       sorts:
         search_api_id:
           id: search_api_id
